# actix-practice

./: .gitignore  .rustfmt.toml  Cargo.toml  pyproject.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/middlewares/: mod.rs  otel.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/services/mock_llm/: Cargo.toml
crates/services/mock_llm/src/: lib.rs  main.rs
crates/services/todos/: Cargo.toml
crates/services/todos/src/: lib.rs
crates/utils/stream/: Cargo.toml
crates/utils/stream/src/: main.rs
src/actix_practice/: __init__.py  main.py
