[project]
name = "actix-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "prem", email = "prem.ch@ku.th" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "pytz>=2025.2",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
