[package]
name = "utils_stream"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
tokio = {version = "1.48.0", features = ["full"]}
tokio-macros = { version = "0.2.0-alpha.6" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }